--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -23,4 +23,6 @@ jobs:
     - name: Release
       uses: softprops/action-gh-release@v1
       if: startsWith(github.ref, 'refs/tags/')
+      with:
+        files: test-go-release-action
 
