--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -15,7 +15,7 @@ jobs:
         go-version: 1.17
 
     - name: Build
-      run: go build -v ./...
+      run: GOOS=windows GOARCH=amd64 go build -v ./...
 
     - name: Test
       run: "ls -la"
