--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -13,13 +13,13 @@ jobs:
       uses: actions/setup-go@v2
       with:
         go-version: 1.17
+    
+    - name: Test
+      run: go test -v ./...
 
     - name: Build
-      run: GOOS=windows GOARCH=amd64 go build -v ./...
-
-    - name: Test
-      run: "ls -la"
-      
+      run:  go build -v ./...
+            
     - name: Release
       uses: softprops/action-gh-release@v1
       if: startsWith(github.ref, 'refs/tags/')
