--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -30,5 +30,5 @@ jobs:
       uses: softprops/action-gh-release@v1
       if: startsWith(github.ref, 'refs/tags/')
       with:
-        files: test-go-release-action.exe
+        files: test-go-release-action*
 
